Added folder styles and landing pages

--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -23,7 +23,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/ShareFiles-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic.htm">Shared Files</a>
+                    <p class="tile-title"><a href="Sample Landing Topic 2.htm">Shared Files</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -31,7 +31,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/Light-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic.htm">Idea Center</a>
+                    <p class="tile-title"><a href="Sample Landing Topic 3.htm">Idea Center</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -39,7 +39,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/VideosImages-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic.htm">Image Support</a>
+                    <p class="tile-title"><a href="Sample Landing Topic 4.htm">Image Support</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
