--- a/Content/Exceptional Transport Application.htm
+++ b/Content/Exceptional Transport Application.htm
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="974" MadCap:lastWidth="526">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
     </head>
     <body>
-        <h1>Sample Landing Topic</h1>
+        <h1>Exceptional Transport Application</h1>
         <p>This is a sample landing topic. </p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>
