--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 class="home">
-			Hello, How Can We Help?</h1>
+			Hello, This site is under construction :)</h1>
         <div class="home-tiles-container">
             <div class="search">
                 <MadCap:searchBarProxy data-mc-skin="/Project/Skins/SearchHome.flskn" />
@@ -15,7 +15,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/Services-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic.htm">Services</a>
+                    <p class="tile-title"><a href="Exceptional Transport Application.htm">Exceptional Transport Application</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -23,7 +23,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/ShareFiles-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic 2.htm">Shared Files</a>
+                    <p class="tile-title"><a href="Goods Compatibility.htm">Goods Compatibility</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -31,7 +31,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/Light-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic 3.htm">Idea Center</a>
+                    <p class="tile-title"><a href="Wagon Compatibility.htm">Wagon Compatibility</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -39,7 +39,7 @@
                     <p class="tile-title">
                         <img src="Resources/Images/Assets/Icons/MainIcons/VideosImages-orange.png" />
                     </p>
-                    <p class="tile-title"><a href="Sample Landing Topic 4.htm">Image Support</a>
+                    <p class="tile-title"><a href="Path Compatibility.htm">Path Compatibility</a>
                     </p>
                     <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
