--- a/Content/A_Exceptional Consignments/Definition.htm
+++ b/Content/A_Exceptional Consignments/Definition.htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head>
+    <head><title>Definition</title>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body class="row">
