--- a/Content/Exceptional Transport Application.htm
+++ b/Content/Exceptional Transport Application.htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head>
+    <head><title>Exceptional Transport Application</title>
     </head>
     <body>
         <h1>Exceptional Transport Application</h1>
