--- a/Content/Path Compatibility.htm
+++ b/Content/Path Compatibility.htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head>
+    <head><title>Path Compatibility</title>
     </head>
     <body>
         <h1>Sample Landing Topic 4</h1>
