--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -17,7 +17,7 @@
                     </p>
                     <p class="tile-title"><a href="Exceptional Transport Application.htm">Exceptional Transport Application</a>
                     </p>
-                    <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="tile-content">Explore the structure of the application for an exceptional carriage authorization. See what to check.</p>
                 </div>
                 <div>
                     <p class="tile-title">
@@ -25,7 +25,7 @@
                     </p>
                     <p class="tile-title"><a href="Goods Compatibility.htm">Goods Compatibility</a>
                     </p>
-                    <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="tile-content">This check is crucial to ensure the safe and efficient movement of cargo. See what defines goods.</p>
                 </div>
                 <div>
                     <p class="tile-title">
@@ -33,7 +33,7 @@
                     </p>
                     <p class="tile-title"><a href="Wagon Compatibility.htm">Wagon Compatibility</a>
                     </p>
-                    <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="tile-content">Such check is crucial to ensure the goods conformity with the intended use of the wagon and path preference. Learn more.</p>
                 </div>
                 <div>
                     <p class="tile-title">
@@ -41,7 +41,7 @@
                     </p>
                     <p class="tile-title"><a href="Path Compatibility.htm">Path Compatibility</a>
                     </p>
-                    <p class="tile-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="tile-content">In this check goods on the wagons or just wagons are compered with requested path's parameters. See what defines path.</p>
                 </div>
             </div>
         </div>
