--- a/Content/Wagon Compatibility.htm
+++ b/Content/Wagon Compatibility.htm
@@ -3,7 +3,119 @@
     <head><title>Wagon Compatibility</title>
     </head>
     <body>
-        <h1>Sample Landing Topic 3</h1>
+        <h1>Wagon Compatibility</h1>
         <p>Delete this text and replace it with your own content.</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#1a<MadCap:dropDownHotspot>Wagon type</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#2a<MadCap:dropDownHotspot>Wagon series</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#2b<MadCap:dropDownHotspot>Interoperability</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#3<MadCap:dropDownHotspot>Wheel-base / bogie pivot pitch* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#4<MadCap:dropDownHotspot>Wheel-base in bogie* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#5<MadCap:dropDownHotspot>Number of axles*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#6a<MadCap:dropDownHotspot>Length of the wagon between the bumpers* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#6b<MadCap:dropDownHotspot>Wagon floor height* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#7<MadCap:dropDownHotspot>Tare weight of wagon* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#7+8<MadCap:dropDownHotspot>Total weight* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#9<MadCap:dropDownHotspot>Load per meter* [<sup>t</sup>/<sub>m</sub>]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#10<MadCap:dropDownHotspot>Largest axle load* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#19<MadCap:dropDownHotspot>Comments on critical points</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#28<MadCap:dropDownHotspot>Miscellaneous -remarks on railway wagons</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#29<MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#33<MadCap:dropDownHotspot>Inspection requirement - trust based agreement</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
     </body>
 </html>
