Committing file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/B_Fouled Gauge/Fouled Gauge.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Resources/Scripts/require.config.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchUrl_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchTopic_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Search.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.xml file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Home.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/index.mcwebhelp file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Goods Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Path Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Wagon Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk2.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/HTML5 - Top Navigation.4.log.zip

--- a/Content/Path Data.htm
+++ b/Content/Path Data.htm
@@ -1,103 +1,62 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Wagon Compatibility</title>
+    <head><title>Path Compatibility</title>
     </head>
     <body>
-        <h1>Wagon Compatibility</h1>
+        <h1>Path Data</h1>
         <p>Delete this text and replace it with your own content.</p>
+        <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#1a<MadCap:dropDownHotspot>Wagon type</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#20a<MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#2a<MadCap:dropDownHotspot>Wagon series</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#20b<MadCap:dropDownHotspot>RU executing the carriage*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#2b<MadCap:dropDownHotspot>Interoperability</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#21<MadCap:dropDownHotspot>Dispatch station*.</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#3<MadCap:dropDownHotspot>Wheel-base / bogie pivot pitch* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#22<MadCap:dropDownHotspot>Destination station*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#4<MadCap:dropDownHotspot>Wheel-base in bogie* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#23a<MadCap:dropDownHotspot>Route requested by consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#5<MadCap:dropDownHotspot>Number of axles*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#24<MadCap:dropDownHotspot>Carriage arrangement*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#6a<MadCap:dropDownHotspot>Length of the wagon between the bumpers* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#27a<MadCap:dropDownHotspot>Consignee*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#6b<MadCap:dropDownHotspot>Wagon floor height* [mm]</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#7<MadCap:dropDownHotspot>Tare weight of wagon* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#7+8<MadCap:dropDownHotspot>Total weight* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#9<MadCap:dropDownHotspot>Load per meter* [<sup>t</sup>/<sub>m</sub>]</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#10<MadCap:dropDownHotspot>Largest axle load* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#19<MadCap:dropDownHotspot>Comments on critical points</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#28<MadCap:dropDownHotspot>Miscellaneous -remarks on railway wagons</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#27b<MadCap:dropDownHotspot>Freight payer</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
@@ -111,7 +70,35 @@
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#33<MadCap:dropDownHotspot>Inspection requirement - trust based agreement</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#25<MadCap:dropDownHotspot>Custom station</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#26<MadCap:dropDownHotspot>Transhipment port - harbour loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#30<MadCap:dropDownHotspot>Direction of travel - label O</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#31<MadCap:dropDownHotspot>Previous forwarding numbers</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>&#160;</p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#32<MadCap:dropDownHotspot>Loading date, delivery date</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
             </MadCap:dropDownBody>
