Wagon Data+ Home

--- a/Content/Wagon Data.htm
+++ b/Content/Wagon Data.htm
@@ -76,67 +76,41 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#10<MadCap:dropDownHotspot>Largest axle load* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Enter a value indicated by wagon manufacturer or a calculated the actual value of load per meter. Alternatively you may declare the maximum value of load per meter associated withe line class reference values. For wagons with load grid it is sufficient to declare "normal", if allowed total weight for the line class is not exceeded..</p>
+                <p>Enter a value indicated by wagon manufacturer or a calculated the actual value of load per meter. Alternatively you may declare the maximum value of load per meter associated withe line class reference values. For wagons with load grid it is sufficient to declare "normal", if allowed total weight for the line class is not exceeded.<br />For example: 20.0. normal D3.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#19<MadCap:dropDownHotspot>Comments on critical points</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Declare the vehicle gauge profile with which wagon conforms. Where applicable declare the upper and lower reference profile conformity.<br />For Example.</p>
+                <p>Declare the vehicle gauge profile with which wagon conforms. Where applicable declare the upper and lower reference profile conformity. Determine compliance with the kinematic or static gauge profile by reference to UIC leaflet 505-1 or EN 15273-2 as appropriate.<br />For Example: Wagon conforms with G1/GI1 reference profile, The wagon contour does not exceed the reference profile of the G2 kinematic gauge according to the EN standard.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
-        <ul>
-            <li>
-                <p>When transporting a good on a wagon  the primary document is wagon data sheet. For open wagons in addition a loading scheme is required. Wagon sketch is also required, when missing in the wagon data sheet. More documents and declarations are required for wagons which are transported as a subject </p>
-            </li>
-        </ul>
-        <p>The type of documentation required to complete application with the wagon full parameters  depends on the subject of the commercial contract. For transport of a good on a wagon fewer parameters are required than for transport of a wagon as a contract subject especially when the wagon is not yet placed in service. Technical and operating information can be obtained from the wagon documentation or wagon markings.</p>
-        <p>Wagon decaration in this point is required if the wagons run on their wheels as a subject to </p>
+        <p>Wagon declaration in this point is required if the wagons run on their wheels as a subject to commercial contract.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#1a<MadCap:dropDownHotspot>Wagon type</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Here you declare wagon series (letters)In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example:_______.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
-        <p>The following wagon parameters declaration is always required  in the application for exceptional transport. They affect the carriage conditions  defined by an infrastructure manager. These carriage conditions for a particular type of a good will vary, depending on the wagon type used for the transportation.</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>Other wagons in a train are either from other railway undertakings or from the private vehicle owners.  In such case wagon parameters check takes more effort since not all parameters are at hand. The type of documentation required to complete the wagon parameters in the application will depend on whether the subject of the contract is the transport of a good on wagon, or transport of a wagon as a contract subject. Technical and operating information can be obtained from the wagon documentation or wagon markings.</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#26<MadCap:dropDownHotspot>Harbour loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>   For transporting a wagon which is a subject to contract the above mentioned parameter sources are usually sufficient when wagon is already placed in service. ill needMore documents and declarations are required for wagons which are transported as a subject </p>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#28<MadCap:dropDownHotspot>Miscellaneous -remarks on railway wagons</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example:_______.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#29<MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example:_______.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#33<MadCap:dropDownHotspot>Inspection requirement - trust based agreement</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example:_______.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
