--- a/Content/B_Fouled Gauge/Fouled Gauge.htm
+++ b/Content/B_Fouled Gauge/Fouled Gauge.htm
@@ -10,7 +10,7 @@
         <p>Outline Procedure</p>
         <p>Vehicle Gauge</p>
         <p>Structure Gauge</p>
-        <p>Critical Points<br /></p>
+        <p>Critical Points<br />Since not all cargo items are symmetrical, <br /></p>
         <p>Remarks to Critical Points</p>
     </body>
 </html>
